--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- custom css  -->
     <link rel="stylesheet" href="./assets/styles/style.css">
 
+    <!-- Responsive custom css -->
+     <link rel="stylesheet" href="./assets/styles/responsive.css">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
@@ -33,6 +36,11 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
+            <div class="menu">
+               <div class="solid"></div>
+               <div class="solid"></div>
+               <div class="solid"></div>
+            </div>
         </nav>
 
         <!-- hero section structure -->
