category section design and reponsive compleate

--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
                 <img src="./assets/images/banner-images/tv.png" alt="">
             </div>
          </section>
+
+         <section class="category-container">
+            <h2 class="title">category</h2>
+            <div class="categorys">
+                <div class="category-item" >
+                    <h2>Watch</h2>
+                    <img src="./assets/images/categories/watch.png" alt="">
+                </div>
+                <div class="category-item">
+                    <h2>Bag</h2>
+                    <img src="./assets/images/categories/bag.png" alt="">
+                </div>
+                <div class="category-item">
+                    <h2>Shoes</h2>
+                    <img src="./assets/images/categories/shoes.png" alt="">
+                </div>
+            </div>
+         </section>
     </main>
 
 </body>
