--- a/index.html
+++ b/index.html
@@ -10,70 +10,176 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
 
     <!-- Responsive custom css -->
-     <link rel="stylesheet" href="./assets/styles/responsive.css">
+    <link rel="stylesheet" href="./assets/styles/responsive.css">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
 
 </head>
 
 <body>
     <main>
 
-        <!-- nav section structure -->
-        <nav>
-            <figure>
-                <img src="./assets/images/logo.png" alt="">
-            </figure>
-            <div class="search">
-                <input type="search" placeholder="Search">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"/></svg>
-            </div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Product</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-            <div class="menu">
-               <div class="solid"></div>
-               <div class="solid"></div>
-               <div class="solid"></div>
-            </div>
-        </nav>
-
-        <!-- hero section structure -->
-         <section class="hero-container">
-            <div class="hero-content">
-                <h1>Mi LED TV 4A PRO 32</h1>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-            <h4>$1289</h4>
-            <button>BUY NOW &rightarrow;</button>
-            </div>
-
-            <div class="hero-image">
-                <img src="./assets/images/banner-images/tv.png" alt="">
-            </div>
-         </section>
-
-         <section class="category-container">
-            <h2 class="title">category</h2>
-            <div class="categorys">
-                <div class="category-item" >
-                    <h2>Watch</h2>
-                    <img src="./assets/images/categories/watch.png" alt="">
+        <div class="top">
+            <!-- nav section structure -->
+            <nav>
+                <figure>
+                    <img src="./assets/images/logo.png" alt="">
+                </figure>
+                <div class="search">
+                    <input type="search" placeholder="Search">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                        <path
+                            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
+                    </svg>
                 </div>
-                <div class="category-item">
-                    <h2>Bag</h2>
-                    <img src="./assets/images/categories/bag.png" alt="">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+                <div class="menu">
+                    <div class="solid"></div>
+                    <div class="solid"></div>
+                    <div class="solid"></div>
                 </div>
-                <div class="category-item">
-                    <h2>Shoes</h2>
-                    <img src="./assets/images/categories/shoes.png" alt="">
+            </nav>
+
+            <!-- hero section structure -->
+            <section class="hero-container">
+                <div class="hero-content">
+                    <h1>Mi LED TV 4A PRO 32</h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <h4>$1289</h4>
+                    <button>BUY NOW &rightarrow;</button>
                 </div>
-            </div>
-         </section>
+
+                <div class="hero-image">
+                    <img src="./assets/images/banner-images/tv.png" alt="">
+                </div>
+            </section>
+
+            <!-- Category section structure -->
+            <section class="category-container">
+                <h2 class="title">category</h2>
+                <div class="categorys">
+                    <div class="category-item">
+                        <h2>Watch</h2>
+                        <img src="./assets/images/categories/watch.png" alt="">
+                    </div>
+                    <div class="category-item">
+                        <h2>Bag</h2>
+                        <img src="./assets/images/categories/bag.png" alt="">
+                    </div>
+                    <div class="category-item">
+                        <h2>Shoes</h2>
+                        <img src="./assets/images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <!-- product section structure -->
+        <section class="middle">
+
+            <!-- Shoes section structure -->
+            <section class="product-container">
+                <div class="head">
+                    <h2 class="title">Shoes</h2>
+                    <p>See All</p>
+                </div>
+
+                <div class="products">
+                    <div class="product-items">
+                        <div class="product-image">
+                            <img src="./assets/images/shoes/shoe-1.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h5>Reebok Dart Men’s Shoes</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                            <h4>$1289</h4>
+                            <button>BUY NOW &rightarrow;</button>
+                        </div>
+                    </div>
+                    <div class="product-items">
+                        <div class="product-image">
+                            <img src="./assets/images/shoes/shoe-2.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h5>Reebok Pump</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                            <h4>$799</h4>
+                            <button>BUY NOW &rightarrow;</button>
+                        </div>
+                    </div>
+                    <div class="product-items">
+                        <div class="product-image">
+                            <img src="./assets/images/shoes/shoe-3.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h5>Reebok All Terrain</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                            <h4>$699</h4>
+                            <button>BUY NOW &rightarrow;</button>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+            <!-- Bags section structure -->
+            <section class="product-container">
+                <div class="head">
+                    <h2 class="title">Backpack</h2>
+                    <p>See All</p>
+                </div>
+
+                <div class="products">
+                    <div class="product-items">
+                        <div class="product-image">
+                            <img src="./assets/images/bags/bag-1.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h5>Ison Backpack</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                            <h4>$1289</h4>
+                            <button>BUY NOW &rightarrow;</button>
+                        </div>
+                    </div>
+                    <div class="product-items">
+                        <div class="product-image">
+                            <img src="./assets/images/bags/bag-2.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h5>Biaowang Backpack</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. </p>
+                            <h4>$799</h4>
+                            <button>BUY NOW &rightarrow;</button>
+                        </div>
+                    </div>
+                    <div class="product-items">
+                        <div class="product-image">
+                            <img src="./assets/images/bags/bag-3.png" alt="">
+                        </div>
+                        <div class="product-content">
+                            <h5>Dxyizu WS54 Smart</h5>
+                            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                            <h4>$699</h4>
+                            <button>BUY NOW &rightarrow;</button>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+        </section>
     </main>
 
 </body>
