last section design compleate

--- a/index.html
+++ b/index.html
@@ -180,7 +180,19 @@
             </section>
 
         </section>
+
+
+        <section class="last">
+            <h3>LET'S STAY IN TOUCH</h3>
+            <p>Get updates on sales specials and more</p>
+            <form action="">
+                <input type="email" placeholder="Enter your email">
+                <button id="send">Send</button>
+            </form>
+        </section>
     </main>
+
+    
 
 </body>
 
