--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
 
     <!-- Responsive custom css -->
     <link rel="stylesheet" href="./assets/styles/responsive.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+    <!-- favicon  -->
+     <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 
 </head>
 
